simulator/prepare_sim/cell_export_parser/gen/CellsParser.py
# Generated from Cells.g4 by ANTLR 4.7.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class CellsParser ( Parser ):

    grammarFileName = "Cells.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'1'", "'Connections for cell ''", "'':'", 
                     "'Reference:'", "'Library:'", "'Hierarchical:'", "'Area:'", 
                     "'dont_touch:'", "'Input Pins'", "'Net'", "'Net Driver Pins'", 
                     "'Driver Pin Type'", "'Output Pins'", "'Net Load Pins'", 
                     "'Load Pin Type'", "'Input Pin'", "'('", "')'", "'Input Port'", 
                     "'Output Pin'", "'Output Port'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "Dashes", "Num", "AlphaNum", 
                      "Identifier", "COMMENT", "INFORMATIONLINE", "WS", 
                      "NEWLINE" ]

    RULE_r = 0
    RULE_cell = 1
    RULE_header = 2
    RULE_nameline = 3
    RULE_ref = 4
    RULE_lib = 5
    RULE_area = 6
    RULE_touch = 7
    RULE_inputs = 8
    RULE_outputs = 9
    RULE_io_pin = 10
    RULE_pin_name = 11
    RULE_net_name = 12
    RULE_connected_pins = 13
    RULE_connected_pin = 14
    RULE_newline = 15
    RULE_pin_type = 16
    RULE_input_pin = 17
    RULE_output_pin = 18

    ruleNames =  [ "r", "cell", "header", "nameline", "ref", "lib", "area", 
                   "touch", "inputs", "outputs", "io_pin", "pin_name", "net_name", 
                   "connected_pins", "connected_pin", "newline", "pin_type", 
                   "input_pin", "output_pin" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    Dashes=22
    Num=23
    AlphaNum=24
    Identifier=25
    COMMENT=26
    INFORMATIONLINE=27
    WS=28
    NEWLINE=29

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class RContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(CellsParser.EOF, 0)

        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(CellsParser.NEWLINE)
            else:
                return self.getToken(CellsParser.NEWLINE, i)

        def cell(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CellsParser.CellContext)
            else:
                return self.getTypedRuleContext(CellsParser.CellContext,i)


        def getRuleIndex(self):
            return CellsParser.RULE_r

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterR" ):
                listener.enterR(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitR" ):
                listener.exitR(self)




    def r(self):

        localctx = CellsParser.RContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_r)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 41
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,0,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 38
                    self.match(CellsParser.NEWLINE) 
                self.state = 43
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,0,self._ctx)

            self.state = 45 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 44
                    self.cell()

                else:
                    raise NoViableAltException(self)
                self.state = 47 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,1,self._ctx)

            self.state = 52
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==CellsParser.NEWLINE:
                self.state = 49
                self.match(CellsParser.NEWLINE)
                self.state = 54
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 57
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==CellsParser.T__0:
                self.state = 55
                self.match(CellsParser.T__0)
                self.state = 56
                self.match(CellsParser.NEWLINE)


            self.state = 59
            self.match(CellsParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class CellContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def header(self):
            return self.getTypedRuleContext(CellsParser.HeaderContext,0)


        def outputs(self):
            return self.getTypedRuleContext(CellsParser.OutputsContext,0)


        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(CellsParser.NEWLINE)
            else:
                return self.getToken(CellsParser.NEWLINE, i)

        def inputs(self):
            return self.getTypedRuleContext(CellsParser.InputsContext,0)


        def getRuleIndex(self):
            return CellsParser.RULE_cell

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCell" ):
                listener.enterCell(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCell" ):
                listener.exitCell(self)




    def cell(self):

        localctx = CellsParser.CellContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_cell)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 64
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==CellsParser.NEWLINE:
                self.state = 61
                self.match(CellsParser.NEWLINE)
                self.state = 66
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 67
            self.header()
            self.state = 71
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,5,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 68
                    self.match(CellsParser.NEWLINE) 
                self.state = 73
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,5,self._ctx)

            self.state = 75
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==CellsParser.T__8:
                self.state = 74
                self.inputs()


            self.state = 80
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==CellsParser.NEWLINE:
                self.state = 77
                self.match(CellsParser.NEWLINE)
                self.state = 82
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 83
            self.outputs()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class HeaderContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def nameline(self):
            return self.getTypedRuleContext(CellsParser.NamelineContext,0)


        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(CellsParser.NEWLINE)
            else:
                return self.getToken(CellsParser.NEWLINE, i)

        def ref(self):
            return self.getTypedRuleContext(CellsParser.RefContext,0)


        def lib(self):
            return self.getTypedRuleContext(CellsParser.LibContext,0)


        def area(self):
            return self.getTypedRuleContext(CellsParser.AreaContext,0)


        def touch(self):
            return self.getTypedRuleContext(CellsParser.TouchContext,0)


        def getRuleIndex(self):
            return CellsParser.RULE_header

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterHeader" ):
                listener.enterHeader(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitHeader" ):
                listener.exitHeader(self)




    def header(self):

        localctx = CellsParser.HeaderContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_header)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 85
            self.nameline()
            self.state = 86
            self.match(CellsParser.NEWLINE)
            self.state = 87
            self.ref()
            self.state = 88
            self.match(CellsParser.NEWLINE)
            self.state = 89
            self.lib()
            self.state = 90
            self.match(CellsParser.NEWLINE)
            self.state = 94
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==CellsParser.T__6:
                self.state = 91
                self.area()
                self.state = 92
                self.match(CellsParser.NEWLINE)


            self.state = 99
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==CellsParser.T__7:
                self.state = 96
                self.touch()
                self.state = 97
                self.match(CellsParser.NEWLINE)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class NamelineContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Identifier(self):
            return self.getToken(CellsParser.Identifier, 0)

        def AlphaNum(self):
            return self.getToken(CellsParser.AlphaNum, 0)

        def getRuleIndex(self):
            return CellsParser.RULE_nameline

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNameline" ):
                listener.enterNameline(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNameline" ):
                listener.exitNameline(self)




    def nameline(self):

        localctx = CellsParser.NamelineContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_nameline)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 101
            self.match(CellsParser.T__1)
            self.state = 102
            _la = self._input.LA(1)
            if not(_la==CellsParser.AlphaNum or _la==CellsParser.Identifier):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 103
            self.match(CellsParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class RefContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Identifier(self):
            return self.getToken(CellsParser.Identifier, 0)

        def AlphaNum(self):
            return self.getToken(CellsParser.AlphaNum, 0)

        def getRuleIndex(self):
            return CellsParser.RULE_ref

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRef" ):
                listener.enterRef(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRef" ):
                listener.exitRef(self)




    def ref(self):

        localctx = CellsParser.RefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_ref)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 105
            self.match(CellsParser.T__3)
            self.state = 106
            _la = self._input.LA(1)
            if not(_la==CellsParser.AlphaNum or _la==CellsParser.Identifier):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class LibContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Identifier(self):
            return self.getToken(CellsParser.Identifier, 0)

        def AlphaNum(self):
            return self.getToken(CellsParser.AlphaNum, 0)

        def getRuleIndex(self):
            return CellsParser.RULE_lib

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLib" ):
                listener.enterLib(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLib" ):
                listener.exitLib(self)




    def lib(self):

        localctx = CellsParser.LibContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_lib)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 108
            _la = self._input.LA(1)
            if not(_la==CellsParser.T__4 or _la==CellsParser.T__5):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 109
            _la = self._input.LA(1)
            if not(_la==CellsParser.AlphaNum or _la==CellsParser.Identifier):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class AreaContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Num(self):
            return self.getToken(CellsParser.Num, 0)

        def getRuleIndex(self):
            return CellsParser.RULE_area

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArea" ):
                listener.enterArea(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArea" ):
                listener.exitArea(self)




    def area(self):

        localctx = CellsParser.AreaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_area)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 111
            self.match(CellsParser.T__6)
            self.state = 112
            self.match(CellsParser.Num)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class TouchContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def AlphaNum(self):
            return self.getToken(CellsParser.AlphaNum, 0)

        def getRuleIndex(self):
            return CellsParser.RULE_touch

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTouch" ):
                listener.enterTouch(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTouch" ):
                listener.exitTouch(self)




    def touch(self):

        localctx = CellsParser.TouchContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_touch)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 114
            self.match(CellsParser.T__7)
            self.state = 115
            self.match(CellsParser.AlphaNum)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class InputsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(CellsParser.NEWLINE)
            else:
                return self.getToken(CellsParser.NEWLINE, i)

        def Dashes(self):
            return self.getToken(CellsParser.Dashes, 0)

        def io_pin(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CellsParser.Io_pinContext)
            else:
                return self.getTypedRuleContext(CellsParser.Io_pinContext,i)


        def getRuleIndex(self):
            return CellsParser.RULE_inputs

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInputs" ):
                listener.enterInputs(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInputs" ):
                listener.exitInputs(self)




    def inputs(self):

        localctx = CellsParser.InputsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_inputs)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 117
            self.match(CellsParser.T__8)
            self.state = 118
            self.match(CellsParser.T__9)
            self.state = 121
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==CellsParser.T__10:
                self.state = 119
                self.match(CellsParser.T__10)
                self.state = 120
                self.match(CellsParser.T__11)


            self.state = 123
            self.match(CellsParser.NEWLINE)
            self.state = 124
            self.match(CellsParser.Dashes)
            self.state = 125
            self.match(CellsParser.NEWLINE)
            self.state = 127 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 126
                self.io_pin()
                self.state = 129 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==CellsParser.AlphaNum or _la==CellsParser.Identifier):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class OutputsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(CellsParser.NEWLINE)
            else:
                return self.getToken(CellsParser.NEWLINE, i)

        def Dashes(self):
            return self.getToken(CellsParser.Dashes, 0)

        def io_pin(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CellsParser.Io_pinContext)
            else:
                return self.getTypedRuleContext(CellsParser.Io_pinContext,i)


        def getRuleIndex(self):
            return CellsParser.RULE_outputs

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOutputs" ):
                listener.enterOutputs(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOutputs" ):
                listener.exitOutputs(self)




    def outputs(self):

        localctx = CellsParser.OutputsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_outputs)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 131
            self.match(CellsParser.T__12)
            self.state = 132
            self.match(CellsParser.T__9)
            self.state = 135
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==CellsParser.T__13:
                self.state = 133
                self.match(CellsParser.T__13)
                self.state = 134
                self.match(CellsParser.T__14)


            self.state = 137
            self.match(CellsParser.NEWLINE)
            self.state = 138
            self.match(CellsParser.Dashes)
            self.state = 139
            self.match(CellsParser.NEWLINE)
            self.state = 141 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 140
                self.io_pin()
                self.state = 143 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==CellsParser.AlphaNum or _la==CellsParser.Identifier):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Io_pinContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def pin_name(self):
            return self.getTypedRuleContext(CellsParser.Pin_nameContext,0)


        def NEWLINE(self):
            return self.getToken(CellsParser.NEWLINE, 0)

        def net_name(self):
            return self.getTypedRuleContext(CellsParser.Net_nameContext,0)


        def connected_pins(self):
            return self.getTypedRuleContext(CellsParser.Connected_pinsContext,0)


        def getRuleIndex(self):
            return CellsParser.RULE_io_pin

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIo_pin" ):
                listener.enterIo_pin(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIo_pin" ):
                listener.exitIo_pin(self)




    def io_pin(self):

        localctx = CellsParser.Io_pinContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_io_pin)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 145
            self.pin_name()
            self.state = 149
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==CellsParser.AlphaNum or _la==CellsParser.Identifier:
                self.state = 146
                self.net_name()
                self.state = 147
                self.connected_pins()


            self.state = 151
            self.match(CellsParser.NEWLINE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Pin_nameContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Identifier(self):
            return self.getToken(CellsParser.Identifier, 0)

        def AlphaNum(self):
            return self.getToken(CellsParser.AlphaNum, 0)

        def getRuleIndex(self):
            return CellsParser.RULE_pin_name

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPin_name" ):
                listener.enterPin_name(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPin_name" ):
                listener.exitPin_name(self)




    def pin_name(self):

        localctx = CellsParser.Pin_nameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_pin_name)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 153
            _la = self._input.LA(1)
            if not(_la==CellsParser.AlphaNum or _la==CellsParser.Identifier):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Net_nameContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Identifier(self):
            return self.getToken(CellsParser.Identifier, 0)

        def AlphaNum(self):
            return self.getToken(CellsParser.AlphaNum, 0)

        def getRuleIndex(self):
            return CellsParser.RULE_net_name

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNet_name" ):
                listener.enterNet_name(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNet_name" ):
                listener.exitNet_name(self)




    def net_name(self):

        localctx = CellsParser.Net_nameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_net_name)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 155
            _la = self._input.LA(1)
            if not(_la==CellsParser.AlphaNum or _la==CellsParser.Identifier):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Connected_pinsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def connected_pin(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CellsParser.Connected_pinContext)
            else:
                return self.getTypedRuleContext(CellsParser.Connected_pinContext,i)


        def getRuleIndex(self):
            return CellsParser.RULE_connected_pins

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConnected_pins" ):
                listener.enterConnected_pins(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConnected_pins" ):
                listener.exitConnected_pins(self)




    def connected_pins(self):

        localctx = CellsParser.Connected_pinsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_connected_pins)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 158 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 157
                    self.connected_pin()

                else:
                    raise NoViableAltException(self)
                self.state = 160 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,15,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Connected_pinContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def newline(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CellsParser.NewlineContext)
            else:
                return self.getTypedRuleContext(CellsParser.NewlineContext,i)


        def pin_type(self):
            return self.getTypedRuleContext(CellsParser.Pin_typeContext,0)


        def Identifier(self):
            return self.getToken(CellsParser.Identifier, 0)

        def AlphaNum(self):
            return self.getToken(CellsParser.AlphaNum, 0)

        def getRuleIndex(self):
            return CellsParser.RULE_connected_pin

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConnected_pin" ):
                listener.enterConnected_pin(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConnected_pin" ):
                listener.exitConnected_pin(self)




    def connected_pin(self):

        localctx = CellsParser.Connected_pinContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_connected_pin)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 162
            self.newline()
            self.state = 163
            _la = self._input.LA(1)
            if not(_la==CellsParser.AlphaNum or _la==CellsParser.Identifier):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 164
            self.newline()
            self.state = 165
            self.pin_type()
            self.state = 166
            self.newline()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class NewlineContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NEWLINE(self):
            return self.getToken(CellsParser.NEWLINE, 0)

        def getRuleIndex(self):
            return CellsParser.RULE_newline

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNewline" ):
                listener.enterNewline(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNewline" ):
                listener.exitNewline(self)




    def newline(self):

        localctx = CellsParser.NewlineContext(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_newline)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 169
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,16,self._ctx)
            if la_ == 1:
                self.state = 168
                self.match(CellsParser.NEWLINE)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Pin_typeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def input_pin(self):
            return self.getTypedRuleContext(CellsParser.Input_pinContext,0)


        def output_pin(self):
            return self.getTypedRuleContext(CellsParser.Output_pinContext,0)


        def getRuleIndex(self):
            return CellsParser.RULE_pin_type

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPin_type" ):
                listener.enterPin_type(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPin_type" ):
                listener.exitPin_type(self)




    def pin_type(self):

        localctx = CellsParser.Pin_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 32, self.RULE_pin_type)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 173
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [CellsParser.T__15, CellsParser.T__18]:
                self.state = 171
                self.input_pin()
                pass
            elif token in [CellsParser.T__19, CellsParser.T__20]:
                self.state = 172
                self.output_pin()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Input_pinContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Identifier(self):
            return self.getToken(CellsParser.Identifier, 0)

        def AlphaNum(self):
            return self.getToken(CellsParser.AlphaNum, 0)
